<resources>
    <string name="app_name">Finku❤</string>
    <string name="title_home">Home</string>
    <string name="add_recap">Add Recap</string>
    <string name="profile">Profile</string>
    <string name="logo">LOGO</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="vector">vector</string>
    <string name="browse_image">Browse Image</string>
    <string name="browse_pdf">Browse PDF</string>
    <string name="imageview">imageview</string>
    <string name="analyze">Analyze</string>
    <string name="result">result</string>
    <string name="mutation_date">Mutation Date</string>
    <string name="upload_your_bank_mutation_using_png_jpg_or_webp_format">Upload your bank mutation using png, jpg, or pdf format.</string>
    <string name="your_recap_lists">Your Recap Summary</string>
    <string name="welcome_back">Welcome back</string>
    <string name="transaction_date">Transaction Date:</string>
    <string name="type">Type:</string>
    <string name="amount">Amount:</string>
    <string name="moredetail">moreDetail</string>
    <string name="edit_result">Edit Result</string>
    <string name="save">Save</string>
    <string name="total_debit">Total Debit:</string>
    <string name="total_credit">Total Credit:</string>
    <string name="difference">Difference:</string>
    <string name="Title_History">Your Recap List</string>
    <string name="getting_started">Getting Started</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="password_error">Password must be at least 8 characters</string>
    <string name="email_error">Invalid email</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="Date">Date:</string>
    <string name="Title">Title:</string>
    <string name="Type">Type:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email</string>
    <string name="full_name">Full Name</string>
    <string name="success_title">Berhasil</string>
    <string name="success_message">Register berhasil</string>
    <string name="registration_failed">Pendaftaran Gagal</string>
    <string name="ok">Lanjutkan</string>
    <string name="login_failed_message">Login gagal, silakan coba lagi.</string>
    <string name="change_language">Ubah Bahasa</string>
    <string name="change_theme">Ubah Tema</string>
    <string name="logout">Logout</string>
    <string name="welcome_subtitle">Just upload your mutation bank and AI will generate your recap!</string>
    <string name="welcome_title">AI Tech Based</string>
    <string name="version_app">Version 1.0</string>
    <string name="total_credit_amount">0</string>
    <string name="total_debit_amount">0</string>
    <string name="total_difference_amount">0</string>
    <string name="Subtitle_register">Register your account first to save your recap</string>
    <string name="subtitle_login">Please fill email and password below. If don\'t have account, please press register button</string>
    <string name="title_login">Login to start using Finku App</string>
</resources>